<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="473dp"
        android:layout_height="167dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/history_entree_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintOverlap,VisualLintBounds" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="450dp"
        android:layout_height="148dp"
        android:background="@drawable/history_entree_background"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/textview_history_destination"
        android:layout_width="315dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/imprima"
        android:text="@string/destination_history"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="311dp"
        android:layout_height="23dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/imprima"
        android:text="@string/date_history"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textview_history_destination"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView_history_prix"
        android:layout_width="311dp"
        android:layout_height="17dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/imprima"
        android:text="@string/prix"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="109dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/approved_border"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView_history_prix"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="97dp"
        android:layout_height="24dp"
        android:background="@drawable/approved_background"
        android:fontFamily="@font/imprima"
        android:text="@string/approved"
        android:textAlignment="center"
        android:textColor="#4D724C"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>